# tw-daytrade-picker

./: .gitignore  README.md  README_DAILY_UPDATE.md  README_ENHANCED.md  config.yaml  config_enhanced.yml  config_strategyC.yml  daily_analysis.py  daily_update.py  main_strategy.py  pyproject.toml  requirements.txt  run_analysis.py  setup_cron.sh  test_data.py
DayTradePicker_Results/: 2025-12-26.xlsx  candidates_2025-12-26.csv  strategyC_candidates_2025-12-26.csv  strategyC_candidates_2025-12-26.xlsx
config/: config_enhanced_v2.yml
data/: themes_mapping.csv
docs/: IMPLEMENTATION_GUIDE.md  INTEGRATION_REPORT.md  NEXT_PHASE_GUIDE.md  file_list.md
reports/: report_2025-12-26.md
scripts/: quick_test.py
src/daytrade_picker/: auto_run.py  backtesting.py  cli.py  market_environment.py  multi_timeframe.py  outputs.py  pipeline.py  report_cli.py  reporting.py  risk.py  risk_management.py  storage.py  tej_themes_builder.py  themes_builder.py  themes_cli.py  trade_logger.py
src/daytrade_picker/core/: data_validator.py  equity_protection.py  error_handler.py  trading_costs.py
src/daytrade_picker/sources/: twse_tpex.py
src/daytrade_picker/strategies/: strategy_a.py
src/daytrade_picker/strategy_c/: __init__.py  backtest.py  data.py  demo.py  enhanced_strategy.py  factors.py  real_run.py  risk.py  risk_flags_schema.py  strategy.py
tests/: test_core_modules.py
